Fix authentication logic and add account to all contexts